recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:6: error: forward reference extends over definition of variable steps
    avance(length)
           ^Spiral:6: error: forward reference extends over definition of variable length
    avance(length)
           ^